--- a/config.json
+++ b/config.json
@@ -2,6 +2,9 @@
     "config" : {
         "storage" : {
         "contentLocation" : "/tmp/hypestore"
-        }   
+        },
+	"replicas" : {
+	    
+	}
     }
 }
