--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "hypestore",
   "version": "0.0.1",
   "description": "HYPErtext STORage Engine",
-  "main": "app.js",
+  "main": "hypestore.js",
   "dependencies": {
     "express": "~3.4.8",
     "raw-body" : "1.1.2"  
