--- a/package.json
+++ b/package.json
@@ -1,32 +1,33 @@
 {
-  "name": "hypestore",
-  "version": "0.0.1",
-  "description": "HYPErtext STORage Engine",
-  "main": "hypestore.js",
-  "dependencies": {
-    "express": "~3.4.8",
-    "raw-body" : "1.1.2"  
+    "name": "hypestore",
+    "version": "0.0.1",
+    "description": "HYPErtext STORage Engine",
+    "main": "hypestore.js",
+    "dependencies": {
+	"express": "~3.4.8",
+	"raw-body" : "~1.1.2",  
+	"mkdirp" : "~0.3.5"
 },
-  "devDependencies": {},
-  "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
-  },
-  "repository": {
-    "type": "git",
-    "url": "https://github.com/salsferrazza/hypestore.git"
-  },
-  "keywords": [
-    "HTTP",
-    "database",
-    "RFC2616",
-    "content management",
-    "REST",
-    "API"
-  ],
-  "author": "Salvatore Sferrazza",
-  "license": "MIT",
-  "bugs": {
-    "url": "https://github.com/salsferrazza/hypestore/issues"
-  },
-  "homepage": "https://github.com/salsferrazza/hypestore"
+"devDependencies": {},
+"scripts": {
+"test": "echo \"Error: no test specified\" && exit 1"
+},
+"repository": {
+"type": "git",
+"url": "https://github.com/salsferrazza/hypestore.git"
+    },
+    "keywords": [
+	"HTTP",
+	"database",
+	"RFC2616",
+	"content management",
+	"REST",
+	"API"
+    ],
+    "author": "Salvatore Sferrazza",
+    "license": "MIT",
+    "bugs": {
+	"url": "https://github.com/salsferrazza/hypestore/issues"
+    },
+    "homepage": "https://github.com/salsferrazza/hypestore"
 }
