--- a/config.json
+++ b/config.json
@@ -1,7 +1,8 @@
 {
 	"port" : "8888",
         "storage" : {
-            "contentLocation" : "./htdocs"
+            "contentLocation" : "./htdocs",
+	    "indexFile" : ".index"
         },
 	"replicas" : {
 	    
