--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
     "name": "hypestore",
-    "version": "0.0.1",
-    "description": "HYPErtext STORage Engine",
+    "version": "0",
+    "description": "HYPErmedia STORage Engine",
     "main": "hypestore.js",
     "dependencies": {
 	"express": "~3.4.8",
