--- a/package.json
+++ b/package.json
@@ -1,33 +1,34 @@
 {
     "name": "hypestore",
-    "version": "0",
+    "version": "0.0.0",
     "description": "HYPErmedia STORage Engine",
     "main": "hypestore.js",
     "dependencies": {
-	"express": "~3.4.8",
-	"raw-body" : "~1.1.2",  
-	"mkdirp" : "~0.3.5"
-},
-"devDependencies": {},
-"scripts": {
-"test": "echo \"Error: no test specified\" && exit 1"
-},
-"repository": {
-"type": "git",
-"url": "https://github.com/salsferrazza/hypestore.git"
-    },
-    "keywords": [
-	"HTTP",
-	"database",
-	"RFC2616",
-	"content management",
-	"REST",
-	"API"
-    ],
-    "author": "Salvatore Sferrazza",
-    "license": "MIT",
-    "bugs": {
-	"url": "https://github.com/salsferrazza/hypestore/issues"
-    },
-    "homepage": "https://github.com/salsferrazza/hypestore"
+		"express": "~3.4.8",
+		"raw-body": "~1.1.2",  
+		"mkdirp" : "~0.3.5"
+	},
+	"devDependencies": {},
+	"scripts": {
+		"test": "echo \"Error: no test specified\" && exit 1"
+	},
+	"repository": {
+		"type": "git",
+		"url": "https://github.com/salsferrazza/hypestore.git"
+	},
+	"keywords": [
+		"HTTP",
+		"database",
+		"RFC2616",
+		"content management",
+		"REST",
+		"API",
+		"web server"
+    	],
+	"author": "Salvatore Sferrazza",
+	"license": "MIT",
+	"bugs": {
+		"url": "https://github.com/salsferrazza/hypestore/issues"
+	},
+	"homepage": "https://github.com/salsferrazza/hypestore"
 }
