--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
     "dependencies": {
 		"express": "~3.4.8",
 		"raw-body": "~1.1.2",  
-		"mkdirp" : "~0.3.5"
+		"mkdirp" : "~0.3.5",
+		"mime-types": "~2.1.12"
 	},
 	"devDependencies": {},
 	"scripts": {
