--- a/package.json
+++ b/package.json
@@ -7,7 +7,9 @@
 		"express": "~3.4.8",
 		"raw-body": "~1.1.2",  
 		"mkdirp" : "~0.3.5",
-		"mime-types": "~2.1.12"
+		"mime-types": "~2.1.12",
+		"resolve-path": "~1.3.3",
+		"parseurl": "~1.3.1"
 	},
 	"devDependencies": {},
 	"scripts": {
