--- a/config.json
+++ b/config.json
@@ -1,8 +1,7 @@
 {
 	"port" : "8888",
         "storage" : {
-            "contentLocation" : "./htdocs",
-	    "indexFile" : ".index"
+            "contentLocation" : "./htdocs"
         },
 	"replicas" : {
 	    
